# Cnver

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
src/: DEVELOPER  Makefile  Makefile.am  Makefile.in  add_breaks.cpp  add_links.cpp  axt_to_binary.c  block2graph.cpp  build_companion_package.sh  cnver.pl  fill_reference_graph.c  filter_axt.cpp  find_mean_sd.cpp  find_spikes.c  glue2block.cpp  glue2graph.cpp  intRemove2.cpp  interleave_bam.cpp  interval_join.cpp  make_donor_graph.cpp  make_gc_map.cpp  make_ns.cpp  make_reference_graph.c  map_coord.cpp  maps2bin.cpp  merge_intervals.py  merge_links.cpp  project_files  readbin.cpp  report_cnvs.cpp  report_cnvs_old.cpp  smoother.sh
src/.deps/: BGZF.Po  BamReader.Po  BamWriter.Po  axt_to_binary.Po  fill_reference_graph.Po  find_mean_sd.Po  find_spikes.Po  intRemove2.Po  interleave_bam.Po  interval_join.Po  make_donor_graph.Po  make_gc_map.Po  make_ns.Po  make_reference_graph.Po  make_simple_coverage.Po  maps2bin.Po  readbin.Po  report_cnvs.Po
src/cluster/: Makefile  Makefile.am  Makefile.in  cluster_matepairs.cpp  concordancy_analysis.cpp  idx_build.cpp  idx_lookup.cpp  index.h  index_leftovers.sh  screen_contig_breaks.cpp
src/cluster/.deps/: BGZF.Po  BamReader.Po  BamWriter.Po  cluster_matepairs.Po  concordancy_analysis.Po  idx_build.Po  idx_lookup.Po  screen_contig_breaks.Po
src/cs2-4.6/: Makefile  Makefile.am  Makefile.in  cs2  cs2.c  parser_cs2.c
src/cs2-4.6/.deps/: cs2-cs2.Po  cs2-timer.Po
src/flow_solve/: Makefile  Makefile.am  Makefile.in  README  add_cs2_header.cpp  affiner.pl  biflow_solve.pl  flow2sol.cpp  graph2dot.cpp  linearize.cpp  make_cs2_graph.pl
src/high-copy-count-regions/: Makefile  Makefile.am  Makefile.in  findRepeats.cpp  sequence.cpp  sim_repeats.sh
src/high-copy-count-regions/.deps/: findRepeats.Po  sequence.Po
src/include/: InputReader.h  block.h  dbtypes.h  defs.h  graphtypes.h  interval.h  union.h
src/post_analysis/: Makefile  Makefile.am  Makefile.in  alSignal.cpp  bestOverlap.cpp  cluster_info.pl  doc_walker.cpp  edge_walker.cpp  find_support.pl  gcContent.cpp  ppwalker.cpp  ref_walker.pl  segment_walker.pl
src/post_analysis/.deps/: bestOverlap.Po  doc_walker.Po  edge_walker.Po  gcContent.Po
