##AM_CPPFLAGS=$(DEPS_CFLAGS)
bin_PROGRAMS=interval_join map_coord merge_links block2graph add_links add_breaks glue2block make_gc_map report_cnvs maps2bin find_spikes make_simple_coverage interleave_bam readbin make_ns find_mean_sd intRemove2 filter_axt
intRemove2_SOURCES=intRemove2.cpp include/interval.h
find_mean_sd_SOURCES=find_mean_sd.cpp include/defs.h include/InputReader.h bamtools/BamAux.h bamtools/zlib.h bamtools/zconf.h bamtools/BGZF.cpp bamtools/BamReader.cpp bamtools/BamWriter.cpp include/InputReader.h include/dbtypes.h
readbin_SOURCES=readbin.cpp include/dbtypes.h include/defs.h
make_ns_SOURCES=make_ns.cpp include/defs.h
maps2bin_SOURCES=maps2bin.cpp bamtools/BamAux.h bamtools/zlib.h bamtools/zconf.h bamtools/BGZF.cpp bamtools/BamReader.cpp bamtools/BamWriter.cpp include/dbtypes.h include/defs.h include/InputReader.h
#maps2bin_LDADD=-lz
interleave_bam_SOURCES=interleave_bam.cpp bamtools/BamAux.h bamtools/zlib.h bamtools/zconf.h bamtools/BGZF.cpp bamtools/BamReader.cpp bamtools/BamWriter.cpp 
#interleave_bam_LDADD=-lz
glue2block_SOURCES=glue2block.cpp include/graphtypes.h include/defs.h include/union.h include/block.h
add_breaks_SOURCES=add_breaks.cpp include/interval.h include/defs.h include/block.h
block2graph_SOURCES=block2graph.cpp include/interval.h include/defs.h include/block.h
add_links_SOURCES=add_links.cpp include/interval.h include/defs.h include/block.h
merge_links_SOURCES=merge_links.cpp include/defs.h 
map_coord_SOURCES=map_coord.cpp include/defs.h 
filter_axt_SOURCES=filter_axt.cpp include/defs.h include/dbtypes.h
make_gc_map_SOURCES=make_gc_map.cpp include/dbtypes.h include/defs.h
report_cnvs_SOURCES=report_cnvs.cpp include/block.h include/interval.h
find_spikes_SOURCES=find_spikes.c 
make_simple_coverage_SOURCES=make_simple_coverage.cpp include/dbtypes.h
interval_join_SOURCES=interval_join.cpp 
SUBDIRS=cluster post_analysis cs2-4.6 high-copy-count-regions flow_solve
EXTRA_DIST=bamtools cnver.pl smoother.sh merge_intervals.py
