bin_PROGRAMS=idx_build idx_lookup concordancy_analysis cluster_matepairs screen_contig_breaks
idx_build_SOURCES=idx_build.cpp
idx_lookup_SOURCES=idx_lookup.cpp index.h
concordancy_analysis_SOURCES=concordancy_analysis.cpp ../bamtools/BamAux.h ../bamtools/zlib.h ../bamtools/zconf.h ../bamtools/BGZF.cpp ../bamtools/BamReader.cpp ../bamtools/BamWriter.cpp ../include/dbtypes.h ../include/defs.h ../include/InputReader.h
cluster_matepairs_SOURCES=cluster_matepairs.cpp 
screen_contig_breaks_SOURCES=screen_contig_breaks.cpp 
EXTRA_DIST=index_leftovers.sh
