bin_PROGRAMS=flow2sol linearize add_cs2_header graph2dot
add_cs2_header_SOURCES=add_cs2_header.cpp ../include/defs.h
graph2dot_SOURCES=graph2dot.cpp ../include/defs.h
linearize_SOURCES=linearize.cpp ../include/defs.h
flow2sol_SOURCES=flow2sol.cpp ../include/interval.h ../include/defs.h ../include/block.h
EXTRA_DIST=biflow_solve.pl README
