bin_PROGRAMS=doc_walker edge_walker bestOverlap gcContent
doc_walker_SOURCES=doc_walker.cpp ../include/interval.h
edge_walker_SOURCES=edge_walker.cpp
bestOverlap_SOURCES=bestOverlap.cpp ../include/interval.h
gcContent_SOURCES=gcContent.cpp ../include/interval.h ../include/defs.h
EXTRA_DIST=segment_walker.pl cluster_info.pl ref_walker.pl
