bin_PROGRAMS=doc_walker bestOverlap gcContent alSignal ppwalker
doc_walker_SOURCES=doc_walker.cpp ../include/interval.h
bestOverlap_SOURCES=bestOverlap.cpp ../include/interval.h
gcContent_SOURCES=gcContent.cpp ../include/interval.h ../include/defs.h
alSignal_SOURCES=alSignal.cpp ../include/interval.h ../include/defs.h
ppwalker_SOURCES=ppwalker.cpp ../include/interval.h ../include/defs.h ../include/block.h
EXTRA_DIST=segment_walker.pl cluster_info.pl ref_walker.pl
